corrects header spacing

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -11,6 +11,23 @@
     font-size: 30px;
 }
 
+#banner div {
+    width: 50%;
+}
+
+.text-left {
+    text-align: left;
+    padding-left: 3em;
+    padding-top: 1em;
+}
+
+.text-right {
+    text-align: right;
+    padding-right: 3em;
+    padding-top: 1em;
+}
+
+
 #title {
     text-align: center;
 }
